# python-mip

./: .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  CHANGELOG.md  LICENSE  NEWS  README.md  RELEASE-ANNOUNCEMENT.md  TODO  TODO.md  appveyor.yml  highs_test.py  pyproject.toml  requirements.txt  setup.py
.coin-or/: projDesc.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cibuildwheel.yml  github-ci.yml  publish.yml  test.yml
.kdev4/: mip.kdev4
bench/: .ycm_extra_conf.py  bench.sh  bmcp.py  queens-gurobi.py  queens-pulp.py  queens.ods  queens.py
bench/data/bmcp/: GEOM110.col  GEOM110a.col  GEOM110b.col  GEOM30a.col  GEOM30b.col  GEOM50.col  GEOM50a.col  GEOM50b.col  GEOM70a.col  GEOM70b.col  GEOM90a.col  GEOM90b.col
benchmarks/: bmcp.py  bmcp_data.py  queens-jump.csv  queens-pulp.py  queens.py  rcpsp.py
benchmarks/data/bmcp/: GEOM30.col  GEOM70.col  GEOM90.col  colors.csv
docs/: Makefile  bench.rst  bibliography.rst  classes.rst  conf.py  custom.rst  examples.rst  extern.rst  index.rst  install.rst  intro.rst  plot_log.py  quickstart.rst  references.bib  requirements.txt  sos.rst
docs/coin-or-cup/: Makefile  c-cup.tex  references.bib
docs/images/: 2dlp.odg  rcpsp-opt.eps  rcpsp.eps
docs/podes/: Makefile  pmip-podes.bib  podes-bibstyle.bst  podes-template.sty  python-mip-tutorial-podes.tex  tsp-cuts.py  tsp-lazy.py
docs/python-mip-theme/: __init__.py  layout.html  theme.conf
docs/python-mip_theme/: __init__.py  layout.html  theme.conf
examples/: P1.col  TODO  belgium-tourism-14.tsp  bmcp.py  bmcp_greedy.py  bmcp_sol.py  cgraph.py  cgsep.py  clique_merge.py  conflict_finder.py  cutting_planes.py  cutting_stock.py  cuttingstock_cg.py  cuttingstock_kantorovich.py  europe-tourism-22.tsp  extract_features_mip.py  ft03.jssp  gen_cuts.py  gen_cuts_mip.py  inplace_linexpr_creation.py  jssp.py  jssp_instance.py  knapsack.py  numpy_tensor.py  plant_location.py  plant_location2.py  queens-lazy.py  queens.lp  queens.lp.REMOVED.git-id  queens.py  queens_pulp.py  rcpsp.py  rcpsp2.py  test.sh  tsp-compact-ulysses22.py  tsp-compact.py  tsp-cuts-ulysses22.py  tsp-cuts.py  tsp-gui.py  tsp-lazy-ulysses22.py  (+8 more)
examples/apps/bmcp/: bmcp.py  bmcp2.py  bmcp_mip.py
examples/apps/tsp/: bench.sh  rb-att48.sh  rb-bier127.sh  rb-d493.sh  rb-gr202.sh  rb-lin318.sh  rb-ulysses16.sh  rb-ulysses22.sh  rb.sh  tsp.py  tsplibtodist.py
examples/bench/: bench.sh  queens-gurobi.py  queens-pulp.py  queens-pypy.py  queens.py
lib/: cbc-c-linux-x86-64.so.REMOVED.git-id
milp/: constants.py  gurobi.py  model.py  scip.py
milppy/: dummy.lp.py  gurobi.py  model.py  scip.py  test.py
mip/: __init__.py  _version.py  callbacks.py  cbc.py  conflict.py  constants.py  constr.py  copt.py  entities.py  exceptions.py  expr.py  gurobi.py  highs.py  lists.py  log.py  model.py  ndarray.py  scip.py  solver.py  var.py  version.py
mip/libraries/: cbc-c-darwin-x86-64.a.REMOVED.git-id  cbc-c-darwin-x86-64.dylib.REMOVED.git-id  cbc-c-linux-x86-64.so.REMOVED.git-id  cbc-c-macos-x86-64.dylb.REMOVED.git-id  cbc-c-windows-x86-32.dll.REMOVED.git-id  cbc-c-windows-x86-64.dll.REMOVED.git-id  tst-c-lib.cpp
mip/libraries/lin64/: libCbc.so.0  libCbc.so.0.0.0  libCbc.so.0.0.0.REMOVED.git-id  libCbcSolver.so.0.0.0  libCbcSolver.so.0.0.0.REMOVED.git-id  libCgl.so.0.0.0  libCgl.so.0.0.0.REMOVED.git-id  libClp.so.0  libClp.so.0.0.0  libClp.so.0.0.0.REMOVED.git-id  libClpSolver.so.0.0.0  libClpSolver.so.0.0.0.REMOVED.git-id  libCoinUtils.so.0  libCoinUtils.so.0.0.0  libCoinUtils.so.0.0.0.REMOVED.git-id  libOsi.so.0.0.0  libOsi.so.0.0.0.REMOVED.git-id  libOsiCbc.so.0.0.0  libOsiClp.so.0  libOsiClp.so.0.0.0  libOsiClp.so.0.0.0.REMOVED.git-id  libOsiCommonTest.so.0  libOsiCommonTest.so.0.0.0  libOsiCommonTest.so.0.0.0.REMOVED.git-id  libOsiGlpk.so.0  libOsiGlpk.so.0.0.0  libamd.so.2.2.0  libblas.so.3gf  libblas.so.3gf.REMOVED.git-id  libbz2.so.1.0  libcholmod.so.1.7.1  libcholmod.so.1.7.1.REMOVED.git-id  libcoinasl.so.0.0.0  libcoinasl.so.0.0.0.REMOVED.git-id  libcoinasl.so.2  libcoinasl.so.2.0.0  (+21 more)
scripts/: buildCBCLinux.sh  buildCBCLinuxARM.sh  buildCBCLinuxAs.sh  buildCBCLinuxDbg.sh  buildCBCMac.sh  buildCBCMacARM.sh  buildCBCWin.sh  buildMSV.bat  coinutils-glpk.patch  downloadCBC.sh  downloadCBConly.sh  downloadCBConlysvn.sh  downloadCBCsvn.sh  patchLibraries.sh  patchLibrariesLinux.sh  updateDist.sh  uploadPip.sh
test/: conftest.py  dbft_test.py  examples_test.py  instability_test.py  mip_2d_pack.py  mip_files_test.py  mip_rcpsp.py  mip_test.py  numpy_test.py  rcpsp_instances.py  rcpsp_test.py  test_conflict.py  test_gurobi.py  test_model.py  two_dim_pack_test.py  util.py
test/data/: 1443_0-9.lp  2050_3_7.lp  bft.lp  bft.lp.REMOVED.git-id  fast0507.bas  fast0507.mps.gz.REMOVED.git-id  nw04.mps.gz.REMOVED.git-id  rcpsp-10-1.json  rcpsp-10-2.json  rcpsp-10-3.json  rcpsp-10-4.json  rcpsp-10-5.json  rcpsp-11-1.json  rcpsp-11-2.json  rcpsp-11-3.json  rcpsp-11-4.json  rcpsp-11-5.json  rcpsp-12-1.json  rcpsp-12-2.json  rcpsp-12-3.json  rcpsp-12-4.json  rcpsp-12-5.json  rcpsp-13-1.json  rcpsp-13-2.json  rcpsp-13-3.json  rcpsp-13-4.json  rcpsp-13-5.json  rcpsp-14-1.json  rcpsp-14-2.json  rcpsp-14-3.json  rcpsp-14-4.json  rcpsp-14-5.json  rcpsp-15-1.json  rcpsp-15-2.json  rcpsp-16-1.json  rcpsp-16-2.json  rcpsp-17-1.json  rcpsp-17-2.json  rcpsp-18-1.json  rcpsp-18-2.json  (+71 more)
(+32 files in other folders)
