[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mip"
description = "Python tools for Modeling and Solving Mixed-Integer Linear Programs (MIPs)"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name="Tulio A.M. Toffolo", email="tulio@toffolo.com.br"},
    {name="Haroldo G. Santos", email="haroldo.santos@gmail.com"}
]
keywords = [
    "Optimization",
    "Linear Programming",
    "Integer Programming",
    "Operations Research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dynamic = ["version"]

dependencies = ["cffi>=1.15"]

[project.optional-dependencies]
numpy = [
    "numpy>=1.25; python_version>='3.9'",
    "numpy==1.24.*; python_version=='3.8'",
    "numpy==1.21.*; python_version=='3.7'"
]
gurobi = ["gurobipy>=8"]
highs = ["highsbox>=1.10.0"]
test = [
    "pytest>=7.4",
    "networkx==2.8.8; python_version>='3.8'",
    "networkx==2.6.3; python_version=='3.7'",
    "matplotlib>=3.7; python_version>='3.9'",
    "matplotlib==3.6.2; python_version=='3.8'",
    "matplotlib==3.5.3; python_version=='3.7'"
]

[project.urls]
"Homepage" = "https://www.python-mip.com"
"Repository" = "https://github.com/coin-or/python-mip"

[tool.setuptools]
packages = ["mip"]

[tool.setuptools.package-data]
"mip.libraries" = ["*.so", "*.dylib", "*.dll"]

[tool.setuptools_scm]
write_to = "mip/_version.py"
