[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mip"
description = "Python tools for Modeling and Solving Mixed-Integer Linear Programs (MIPs)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name="Tulio A.M. Toffolo", email="tulio@toffolo.com.br"},
    {name="Haroldo G. Santos", email="haroldo.santos@gmail.com"}
]
keywords = [
    "Optimization",
    "Linear Programming",
    "Integer Programming",
    "Operations Research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dynamic = ["version"]

dependencies = ["cffi>=1.15", "cbcbox>=2.929"]

[project.optional-dependencies]
numpy = [
    "numpy>=1.25,<3",
]
gurobi = ["gurobipy>=10"]
highs = ["highsbox>=1.10.0"]
test = [
    "pytest>=7.4,<9",
    "networkx>=2.8.8,<4",
    "matplotlib>=3.7,<4; platform_system!='Windows' or implementation_name!='pypy'",
]

[project.urls]
"Homepage" = "https://www.python-mip.com"
"Repository" = "https://github.com/coin-or/python-mip"

[tool.setuptools]
packages = ["mip"]

[tool.setuptools_scm]
write_to = "mip/_version.py"
